<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             style="@style/DialogContent.Table">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/DialogText.Description"
            android:layout_column="0"
            android:text="@string/input_description_title"/>

        <TextView
            style="@style/DialogText.Description"
            android:layout_column="1"
            android:text="@string/input_description_content"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextTitle"
            style="@style/DialogInput.EditText"
            android:layout_column="0"
            android:hint="@string/input_hint_title"/>

        <EditText
            android:id="@+id/editTextContent"
            style="@style/DialogInput.EditText"
            android:layout_column="1"
            android:hint="@string/input_hint_content"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/DialogText.Description"
            android:layout_column="0"
            android:text="@string/input_description_visibility"/>

        <TextView
            style="@style/DialogText.Description"
            android:layout_column="1"
            android:text="@string/input_description_priority"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinnerVisibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"/>

        <Spinner
            android:id="@+id/spinnerPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkBoxPersistentPin"
            style="@style/DialogText.CheckBox"
            android:layout_marginTop="16dp"
            android:layout_span="2"
            android:text="@string/input_description_makepinpersistent"/>

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkBoxShowActions"
            style="@style/DialogText.CheckBox"
            android:layout_marginTop="4dp"
            android:layout_span="2"
            android:text="@string/input_description_shownotificationactions"/>

    </TableRow>

</TableLayout>