<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
       xmlns:android="http://schemas.android.com/apk/res/android"
       tools:showIn="@layout/dialog_main">

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                style="@style/DialogText.Description"
                android:layout_column="0"
                android:text="@string/input_description_title"/>

        <TextView
                style="@style/DialogText.Description"
                android:layout_column="1"
                android:text="@string/input_description_content"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/editTextTitle"
                style="@style/DialogInput.EditText"
                android:layout_column="0"
                android:hint="@string/input_hint_title"/>

        <EditText
                android:id="@+id/editTextContent"
                style="@style/DialogInput.EditText"
                android:layout_column="1"
                android:hint="@string/input_hint_content"/>
    </TableRow>

</merge>